# sl_database_migrator

./: Cargo.toml  fish_addon_db.db3  fish_addon_new_db.db3
src/: handy.rs  main.rs  new_seacreatures.rs  new_withdrawal.rs  old_seacreatures.rs  old_withdrawal.rs  small_types.rs
